Fix keypad use on mobile

--- a/src/components/keypad.css
+++ b/src/components/keypad.css
@@ -13,6 +13,8 @@
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
   will-change: transform;
   transition: background 250ms, transform 250ms;
+  cursor: pointer;
+  user-select: none;
 }
 .key {
   composes: lightBackground from "./common.css";
